Correct Notification z-index (show over the modals) Create separate 1inch reducers and move tokens from currencies to 1inch state Add user fetching for all his orders

--- a/src/front/shared/components/notification/NotificationConductor/NotificationConductor.scss
+++ b/src/front/shared/components/notification/NotificationConductor/NotificationConductor.scss
@@ -6,5 +6,5 @@
   position: fixed;
   top: 0;
   right: 5px;
-  z-index: 10110000;
+  z-index: 10000000000;
 }
